interpreter/src/com/pgiletich/lang/parser/langParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 C:\\Users\\sfcpr_000\\Desktop\\lang.g 2013-06-20 16:07:52
 
package com.pgiletich.lang.parser; 
import com.pgiletich.lang.*;
import com.pgiletich.lang.values.*;
import com.pgiletich.lang.nodes.*;
import com.pgiletich.lang.nodes.atoms.*;
import com.pgiletich.lang.nodes.statements.*;
import com.pgiletich.lang.nodes.conditional_statements.*;
import com.pgiletich.lang.nodes.operators.binary.*;
import com.pgiletich.lang.nodes.operators.unary.*;
import com.pgiletich.lang.nodes.operators.binary.arithmetic.*;
import com.pgiletich.lang.nodes.operators.binary.compare.*;
import com.pgiletich.lang.nodes.operators.binary.logic.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class langParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Functions", "CodeBlock", "Indexes", "IdList", "ExpressionList", "ListDeclaration", "FunctionDef", "FunctionSignature", "FunctionCall", "Lookup", "Root", "UnaryMinus", "UnaryNegation", "WhileStatement", "UntilStatement", "ForStatement", "InStatement", "IfStatement", "ReturnStatement", "Expression", "MultiplyAssignment", "MultiplyAssignmentLeft", "MethodCall", "PropertyCall", "Def", "Id", "NewLine", "Class", "Return", "Int", "Float", "Bool", "String", "Dot", "Number", "Comment", "WhiteSpace", "'('", "')'", "'{'", "'}'", "'end'", "','", "'while'", "'until'", "'if'", "'else'", "'for'", "'in'", "'='", "'+='", "'-='", "'*='", "'/='", "'<<'", "'is'", "'or'", "'and'", "'=='", "'!='", "'>='", "'<='", "'>'", "'<'", "'+'", "'-'", "'*'", "'/'", "'^'", "'!'", "'['", "']'"
    };
    public static final int EOF=-1;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int Functions=4;
    public static final int CodeBlock=5;
    public static final int Indexes=6;
    public static final int IdList=7;
    public static final int ExpressionList=8;
    public static final int ListDeclaration=9;
    public static final int FunctionDef=10;
    public static final int FunctionSignature=11;
    public static final int FunctionCall=12;
    public static final int Lookup=13;
    public static final int Root=14;
    public static final int UnaryMinus=15;
    public static final int UnaryNegation=16;
    public static final int WhileStatement=17;
    public static final int UntilStatement=18;
    public static final int ForStatement=19;
    public static final int InStatement=20;
    public static final int IfStatement=21;
    public static final int ReturnStatement=22;
    public static final int Expression=23;
    public static final int MultiplyAssignment=24;
    public static final int MultiplyAssignmentLeft=25;
    public static final int MethodCall=26;
    public static final int PropertyCall=27;
    public static final int Def=28;
    public static final int Id=29;
    public static final int NewLine=30;
    public static final int Class=31;
    public static final int Return=32;
    public static final int Int=33;
    public static final int Float=34;
    public static final int Bool=35;
    public static final int String=36;
    public static final int Dot=37;
    public static final int Number=38;
    public static final int Comment=39;
    public static final int WhiteSpace=40;

    // delegates
    // delegators


        public langParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public langParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return langParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\sfcpr_000\\Desktop\\lang.g"; }


    private Scope currentScope = Scope.getGlobalScopeInstance();
    private LangValue currentClass;


    public static class root_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "root"
    // C:\\Users\\sfcpr_000\\Desktop\\lang.g:64:1: root : codeBlock -> ^( Root codeBlock ) ;
    public final langParser.root_return root() throws RecognitionException {
        langParser.root_return retval = new langParser.root_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        langParser.codeBlock_return codeBlock1 = null;


        RewriteRuleSubtreeStream stream_codeBlock=new RewriteRuleSubtreeStream(adaptor,"rule codeBlock");
        try {
            // C:\\Users\\sfcpr_000\\Desktop\\lang.g:65:2: ( codeBlock -> ^( Root codeBlock ) )
            // C:\\Users\\sfcpr_000\\Desktop\\lang.g:65:3: codeBlock
            {
            pushFollow(FOLLOW_codeBlock_in_root137);
            codeBlock1=codeBlock();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_codeBlock.add(codeBlock1.getTree());


            // AST REWRITE
            // elements: codeBlock
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 65:13: -> ^( Root codeBlock )
            {
                // C:\\Users\\sfcpr_000\\Desktop\\lang.g:65:16: ^( Root codeBlock )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(Root, "Root"), root_1);

                adaptor.addChild(root_1, stream_codeBlock.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "root"

    public static class functionDef_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "functionDef"
    // C:\\Users\\sfcpr_000\\Desktop\\lang.g:68:1: functionDef : Def Id '(' ( idList )? ')' NewLine bracedCodeBlock ( NewLine )+ ;
    public final langParser.functionDef_return functionDef() throws RecognitionException {
        langParser.functionDef_return retval = new langParser.functionDef_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token Def2=null;
        Token Id3=null;
        Token char_literal4=null;
        Token char_literal6=null;
        Token NewLine7=null;
        Token NewLine9=null;
        langParser.idList_return idList5 = null;

        langParser.bracedCodeBlock_return bracedCodeBlock8 = null;


        Object Def2_tree=null;
        Object Id3_tree=null;
        Object char_literal4_tree=null;
        Object char_literal6_tree=null;
        Object NewLine7_tree=null;
        Object NewLine9_tree=null;

        try {
            // C:\\Users\\sfcpr_000\\Desktop\\lang.g:69:2: ( Def Id '(' ( idList )? ')' NewLine bracedCodeBlock ( NewLine )+ )
            // C:\\Users\\sfcpr_000\\Desktop\\lang.g:69:3: Def Id '(' ( idList )? ')' NewLine bracedCodeBlock ( NewLine )+
            {
            root_0 = (Object)adaptor.nil();

            Def2=(Token)match(input,Def,FOLLOW_Def_in_functionDef155); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            Def2_tree = (Object)adaptor.create(Def2);
            adaptor.addChild(root_0, Def2_tree);
            }
            Id3=(Token)match(input,Id,FOLLOW_Id_in_functionDef157); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            Id3_tree = (Object)adaptor.create(Id3);
            adaptor.addChild(root_0, Id3_tree);
            }
            char_literal4=(Token)match(input,41,FOLLOW_41_in_functionDef159); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            char_literal4_tree = (Object)adaptor.create(char_literal4);
            adaptor.addChild(root_0, char_literal4_tree);
            }
            // C:\\Users\\sfcpr_000\\Desktop\\lang.g:69:14: ( idList )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==Id) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // C:\\Users\\sfcpr_000\\Desktop\\lang.g:0:0: idList
                    {
                    pushFollow(FOLLOW_idList_in_functionDef161);
                    idList5=idList();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, idList5.getTree());

                    }
                    break;

            }

            char_literal6=(Token)match(input,42,FOLLOW_42_in_functionDef164); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            char_literal6_tree = (Object)adaptor.create(char_literal6);
            adaptor.addChild(root_0, char_literal6_tree);
            }
            NewLine7=(Token)match(input,NewLine,FOLLOW_NewLine_in_functionDef166); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            NewLine7_tree = (Object)adaptor.create(NewLine7);
            adaptor.addChild(root_0, NewLine7_tree);
            }
            pushFollow(FOLLOW_bracedCodeBlock_in_functionDef168);
            bracedCodeBlock8=bracedCodeBlock();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, bracedCodeBlock8.getTree());
            // C:\\Users\\sfcpr_000\\Desktop\\lang.g:69:50: ( NewLine )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==NewLine) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\Users\\sfcpr_000\\Desktop\\lang.g:0:0: NewLine
            	    {
            	    NewLine9=(Token)match(input,NewLine,FOLLOW_NewLine_in_functionDef170); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    NewLine9_tree = (Object)adaptor.create(NewLine9);
            	    adaptor.addChild(root_0, NewLine9_tree);
            	    }

            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);

            if ( state.backtracking==0 ) {
              currentScope.addFunction(new Function((Id3!=null?Id3.getText():null), (idList5!=null?((Object)idList5.tree):null), (bracedCodeBlock8!=null?((Object)bracedCodeBlock8.tree):null)));
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "functionDef"

    public static class classDeclaration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "classDeclaration"
    // C:\\Users\\sfcpr_000\\Desktop\\lang.g:73:1: classDeclaration : Class Id bracedClassDefinition ( NewLine )+ ;
    public final langParser.classDeclaration_return classDeclaration() throws RecognitionException {
        langParser.classDeclaration_return retval = new langParser.classDeclaration_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token Class10=null;
        Token Id11=null;
        Token NewLine13=null;
        langParser.bracedClassDefinition_return bracedClassDefinition12 = null;


        Object Class10_tree=null;
        Object Id11_tree=null;
        Object NewLine13_tree=null;


        currentClass = new LangValue(LangValue.ClassValue);
        currentScope = currentClass.getScope();

        try {
            // C:\\Users\\sfcpr_000\\Desktop\\lang.g:82:2: ( Class Id bracedClassDefinition ( NewLine )+ )
            // C:\\Users\\sfcpr_000\\Desktop\\lang.g:82:3: Class Id bracedClassDefinition ( NewLine )+
            {
            root_0 = (Object)adaptor.nil();

            Class10=(Token)match(input,Class,FOLLOW_Class_in_classDeclaration192); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            Class10_tree = (Object)adaptor.create(Class10);
            adaptor.addChild(root_0, Class10_tree);
            }
            Id11=(Token)match(input,Id,FOLLOW_Id_in_classDeclaration194); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            Id11_tree = (Object)adaptor.create(Id11);
            adaptor.addChild(root_0, Id11_tree);
            }
            pushFollow(FOLLOW_bracedClassDefinition_in_classDeclaration196);
            bracedClassDefinition12=bracedClassDefinition();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, bracedClassDefinition12.getTree());
            // C:\\Users\\sfcpr_000\\Desktop\\lang.g:82:34: ( NewLine )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==NewLine) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Users\\sfcpr_000\\Desktop\\lang.g:0:0: NewLine
            	    {
            	    NewLine13=(Token)match(input,NewLine,FOLLOW_NewLine_in_classDeclaration198); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    NewLine13_tree = (Object)adaptor.create(NewLine13);
            	    adaptor.addChild(root_0, NewLine13_tree);
            	    }

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);

            if ( state.backtracking==0 ) {

              	currentClass.getScope().set("className", new LangValue((Id11!=null?Id11.getText():null)));
              	Scope.getGlobalScopeInstance().set((Id11!=null?Id11.getText():null), currentClass);
              	
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
            if ( state.backtracking==0 ) {

              currentScope = Scope.getGlobalScopeInstance();
              currentClass = null;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "classDeclaration"

    public static class bracedClassDefinition_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "bracedClassDefinition"
    // C:\\Users\\sfcpr_000\\Desktop\\lang.g:89:1: bracedClassDefinition : ( '{' classDefinition '}' -> classDefinition | classDefinition 'end' -> classDefinition );
    public final langParser.bracedClassDefinition_return bracedClassDefinition() throws RecognitionException {
        langParser.bracedClassDefinition_return retval = new langParser.bracedClassDefinition_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal14=null;
        Token char_literal16=null;
        Token string_literal18=null;
        langParser.classDefinition_return classDefinition15 = null;

        langParser.classDefinition_return classDefinition17 = null;


        Object char_literal14_tree=null;
        Object char_literal16_tree=null;
        Object string_literal18_tree=null;
        RewriteRuleTokenStream stream_45=new RewriteRuleTokenStream(adaptor,"token 45");
        RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
        RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
        RewriteRuleSubtreeStream stream_classDefinition=new RewriteRuleSubtreeStream(adaptor,"rule classDefinition");
        try {
            // C:\\Users\\sfcpr_000\\Desktop\\lang.g:90:2: ( '{' classDefinition '}' -> classDefinition | classDefinition 'end' -> classDefinition )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==43) ) {
                alt4=1;
            }
            else if ( (LA4_0==Def||LA4_0==NewLine||(LA4_0>=44 && LA4_0<=45)) ) {
                alt4=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // C:\\Users\\sfcpr_000\\Desktop\\lang.g:90:3: '{' classDefinition '}'
                    {
                    char_literal14=(Token)match(input,43,FOLLOW_43_in_bracedClassDefinition212); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_43.add(char_literal14);

                    pushFollow(FOLLOW_classDefinition_in_bracedClassDefinition214);
                    classDefinition15=classDefinition();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_classDefinition.add(classDefinition15.getTree());
                    char_literal16=(Token)match(input,44,FOLLOW_44_in_bracedClassDefinition216); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_44.add(char_literal16);



                    // AST REWRITE
                    // elements: classDefinition
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 90:27: -> classDefinition
                    {
                        adaptor.addChild(root_0, stream_classDefinition.nextTree());

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // C:\\Users\\sfcpr_000\\Desktop\\lang.g:91:3: classDefinition 'end'
                    {
                    pushFollow(FOLLOW_classDefinition_in_bracedClassDefinition224);
                    classDefinition17=classDefinition();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_classDefinition.add(classDefinition17.getTree());
                    string_literal18=(Token)match(input,45,FOLLOW_45_in_bracedClassDefinition226); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_45.add(string_literal18);



                    // AST REWRITE
                    // elements: classDefinition
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 91:25: -> classDefinition
                    {
                        adaptor.addChild(root_0, stream_classDefinition.nextTree());

                    }

                    retval.tree = root_0;}
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "bracedClassDefinition"

    public static class classDefinition_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "classDefinition"
    // C:\\Users\\sfcpr_000\\Desktop\\lang.g:94:1: classDefinition : ( NewLine )* ( functionDef )* ;
    public final langParser.classDefinition_return classDefinition() throws RecognitionException {
        langParser.classDefinition_return retval = new langParser.classDefinition_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token NewLine19=null;
        langParser.functionDef_return functionDef20 = null;


        Object NewLine19_tree=null;

        try {
            // C:\\Users\\sfcpr_000\\Desktop\\lang.g:95:2: ( ( NewLine )* ( functionDef )* )
            // C:\\Users\\sfcpr_000\\Desktop\\lang.g:95:3: ( NewLine )* ( functionDef )*
            {
            root_0 = (Object)adaptor.nil();

            // C:\\Users\\sfcpr_000\\Desktop\\lang.g:95:3: ( NewLine )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==NewLine) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // C:\\Users\\sfcpr_000\\Desktop\\lang.g:0:0: NewLine
            	    {
            	    NewLine19=(Token)match(input,NewLine,FOLLOW_NewLine_in_classDefinition240); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    NewLine19_tree = (Object)adaptor.create(NewLine19);
            	    adaptor.addChild(root_0, NewLine19_tree);
            	    }

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            // C:\\Users\\sfcpr_000\\Desktop\\lang.g:95:12: ( functionDef )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==Def) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // C:\\Users\\sfcpr_000\\Desktop\\lang.g:0:0: functionDef
            	    {
            	    pushFollow(FOLLOW_functionDef_in_classDefinition243);
            	    functionDef20=functionDef();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, functionDef20.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "classDefinition"

    public static class idList_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "idList"
    // C:\\Users\\sfcpr_000\\Desktop\\lang.g:98:1: idList : Id ( ',' Id )* -> ^( IdList ( Id )+ ) ;
    public final langParser.idList_return idList() throws RecognitionException {
        langParser.idList_return retval = new langParser.idList_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token Id21=null;
        Token char_literal22=null;
        Token Id23=null;

        Object Id21_tree=null;
        Object char_literal22_tree=null;
        Object Id23_tree=null;
        RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
        RewriteRuleTokenStream stream_Id=new RewriteRuleTokenStream(adaptor,"token Id");

        try {
            // C:\\Users\\sfcpr_000\\Desktop\\lang.g:99:2: ( Id ( ',' Id )* -> ^( IdList ( Id )+ ) )
            // C:\\Users\\sfcpr_000\\Desktop\\lang.g:99:3: Id ( ',' Id )*
            {
            Id21=(Token)match(input,Id,FOLLOW_Id_in_idList255); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_Id.add(Id21);

            // C:\\Users\\sfcpr_000\\Desktop\\lang.g:99:6: ( ',' Id )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==46) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // C:\\Users\\sfcpr_000\\Desktop\\lang.g:99:7: ',' Id
            	    {
            	    char_literal22=(Token)match(input,46,FOLLOW_46_in_idList258); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_46.add(char_literal22);

            	    Id23=(Token)match(input,Id,FOLLOW_Id_in_idList260); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_Id.add(Id23);


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);



            // AST REWRITE
            // elements: Id
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 99:16: -> ^( IdList ( Id )+ )
            {
                // C:\\Users\\sfcpr_000\\Desktop\\lang.g:99:19: ^( IdList ( Id )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(IdList, "IdList"), root_1);

                if ( !(stream_Id.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_Id.hasNext() ) {
                    adaptor.addChild(root_1, stream_Id.nextNode());

                }
                stream_Id.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);
